@@ -1,3 +1,12 @@
+2013-06-18  Glenn Morris  <rgm@gnu.org>
+
+	* mm-decode.el (widget-convert-button): Autoload.
+
+	* sieve-manage.el (mm-enable-multibyte): Autoload.
+
+	* shr.el (libxml-parse-html-region): Declare.
+	(shr-render-buffer): Explicit error if no libxml2 support.
+
 2013-06-17  Teodor Zlatanov  <tzz@lifelogs.com>
 
 	* auth-source.el (auth-source-current-line): New function.
